<resources>

    <string name="app_name">LibraryProject</string>
    <string name="scan_id_card">Scan ID card</string>
    <string name="todo">TODO</string>
    <string name="submit">Submit</string>
    <string name="focus_on_qr_code">For best Results on Flashlight</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="roll_no_scan_id">Scan ID Card</string>
    <string name="registration_no">Registration No.</string>
    <string name="registration_number">Registration Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="we_sent_you_a_6_digit_code">We sent you a 6-digit code.</string>
    <string name="checkin">Check In</string>
    <string name="_continue">Continue</string>
    <string name="checkout">Check Out</string>
    <string name="new_user">Are we connected?</string>
    <string name="password">Password</string>
    <string name="barcodesaved">"q1df4fvc5ds8as1aavr"</string>

    <string name="OTPmessage">OTP sent on this <b>"password"</b> glad to see you.</string>
    <string name="checouttext">For Check-Out Scan QR code</string>
    <string name="checkintext">For Check-In Scan QR code</string>

    <string name="mongoDBdatabase">library_database</string>
    <string name="mongoDBcollection">library_collection</string>
    <string name="mongoDBappid">ju-libraryapp-hptlt</string>
    <string name="stitch_client_app_id">ju-libraryapp-hptlt</string>
    <string name="show_password">Show Password</string>

    <string name="positive_popup_text_default">Successfully </string>
    <string name="positive_popup_title_default">Like a boos</string>
    <string name="negative_popup_text_default">Failed</string>
    <string name="negative_popup_title_default">AWW.. SNAP</string>
    <string name="update">Update</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password...</string>
    <string name="continue234">Continue</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <!--gv1sasii4rayrk5iaarr8sauaa1hnsjmtshi-->
</resources>
