<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_relativelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:background="@drawable/background_transition"
    android:orientation="horizontal"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="72dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/jecrclogo"
        android:visibility="gone"
        tools:ignore="VectorDrawableCompat" />

    <LinearLayout
        android:id="@+id/linearlayoutabove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10sp"
        android:layout_marginRight="10sp"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:visibility="visible">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/lekton_bold">

            <EditText
                android:id="@+id/logginrollno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:focusedByDefault="false"
                android:fontFamily="@font/lekton_bold"
                android:hint="@string/registration_number"
                android:inputType="text"
                android:maxLength="9"
                android:padding="5dp"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="UnusedAttribute" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10sp"
                android:background="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputlayout123"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/lekton_bold">

            <EditText
                android:id="@+id/logginpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/lekton_bold"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10sp"
                android:background="@color/white" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayoutbelow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:visibility="visible">

        <Button
            android:id="@+id/loginSignin"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/submit_background"
            android:fontFamily="@font/caviar_dreams_bold"
            android:onClick="signIn"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight=".5"
                android:clickable="false"
                android:fontFamily="@font/caviar_dreams_bold"
                android:gravity="center"
                android:text="@string/new_user"
                android:textAlignment="center"
                android:textColor="@color/custom1PrimaryDark"
                android:textSize="20sp"
                tools:ignore="NestedWeights,RtlCompat" />

            <Button
                android:id="@+id/signup_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight=".5"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:gravity="center"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/caviar_dreams_bold"
                android:textAlignment="center"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="21sp"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>

