<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:gravity="center">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        app:cardElevation="5sp"
        android:layout_margin="5sp"
        app:cardBackgroundColor="@color/forgetpass1"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/reset_password"
    android:gravity="center"
    android:textSize="25sp"
    android:layout_gravity="center"
    android:layout_marginTop="30sp"
    android:fontFamily="@font/caviar_dreams_bold"
    android:textColor="@color/forgetpass2"
    />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputlayoutfp2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/caviar_dreams_bold"
                android:layout_marginTop="20dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/manual_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textinput_background"
                    android:fontFamily="@font/caviar_dreams_bold"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textSize="16sp"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputlayoutfp3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true"
                android:fontFamily="@font/caviar_dreams_bold">
                <EditText
                    android:id="@+id/manual_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textinput_background"
                    android:fontFamily="@font/caviar_dreams_bold"
                    android:hint="@string/confirm_new_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textSize="16sp"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/pressedbutton12"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:elevation="3sp"
                android:fontFamily="@font/montserrat_semibold"
                android:background="@drawable/button_background_positive2"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />
    </LinearLayout>
</android.support.v7.widget.CardView></RelativeLayout>