<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_relativelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/book"
    android:clickable="false"
    android:orientation="horizontal"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/logo90"
        android:layout_width="72dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:clickable="false"
        android:contentDescription="@string/todo"
        android:visibility="visible"
        app:srcCompat="@drawable/jecrclogo3"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/tvqweqw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearlayoutsplash"
        android:layout_centerHorizontal="true"

        android:fontFamily="@font/lekton_bold"
        android:text="Sign Up"
        android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/linearlayoutsplash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="5dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputlayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/manual_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textinput_background"
                    android:fontFamily="@font/caviar_dreams_bold"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/custom1PrimaryDark"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputlayout5"
                android:layout_width="match_parent"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/manual_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textinput_background"
                    android:fontFamily="@font/caviar_dreams_bold"
                    android:hint="@string/contact"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:paddingTop="10sp"
                    android:textColor="@color/custom1PrimaryDark"
                    android:textSize="16sp" />


            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputlayout9"
                android:layout_width="match_parent"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/manual_registrationnumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textinput_background"
                    android:fontFamily="@font/caviar_dreams_bold"
                    android:hint="@string/registration_number"
                    android:inputType="text"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:paddingTop="10sp"
                    android:textColor="@color/custom1PrimaryDark"
                    android:textSize="16sp" />


            </android.support.design.widget.TextInputLayout>

            <!--<Button
                android:id="@+id/scanidbarcode"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/textinput_background"
                android:fontFamily="@font/lekton_bold"
                android:gravity="start"
                android:hint="@string/roll_no_scan_id"
                android:onClick="scanBarcode"
                android:padding="10dp"
                android:paddingTop="10sp"
                android:textSize="20sp" />-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputlayout12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="true"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/manual_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textinput_background"
                    android:fontFamily="@font/caviar_dreams_bold"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/custom1PrimaryDark"

                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_marginTop="10sp"
                android:id="@+id/submitresult"
                android:layout_width="150sp"
                android:layout_height="50sp"
                android:layout_gravity="center"
                android:background="@drawable/submit_background"
                android:elevation="3dp"
                android:fontFamily="@font/caviar_dreams_bold"
                android:onClick="submitResult"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>
</RelativeLayout>

